finish styling comment post form and fix minor styling for desktop; work on mobile responsiveness next

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
   background: white;
   border-bottom: 1px solid lightgray;
   padding: 20px 0;
+  z-index: 1030;
+  position: fixed;
+  top: 0;
 }
 
 .user__buttons {
@@ -21,5 +24,8 @@
 }
 
 .app__posts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 20px;
 }
