--- a/src/Nav.css
+++ b/src/Nav.css
@@ -5,6 +5,11 @@
     width: 50%;
     padding: 10px;
   }
+
+  a.nav__header {
+    text-decoration: none;
+    color: inherit;
+}
   
   .nav__headerImage{
     width: 25px;
